fix: correctly loader resources before PrometheusThresholdEvaluator